--- a/src/make_setlist/Cargo.toml
+++ b/src/make_setlist/Cargo.toml
@@ -10,3 +10,4 @@ regex = "1.5.3"
 reqwest = {version = "0.11.3", features = ["blocking"]}
 scraper = "0.12.0"
 clap = "=3.0.0-beta.2"
+encoding_rs = "0.8.28"
